# iroh-lan

./: .gitignore  Cargo.toml  Makefile  flake.nix  logs_lin_1.txt
docker_test/: Dockerfile  check_logs.sh  check_reliability_logs.sh  compose-reliability.yaml  compose-stress.yaml  entrypoint_reliability.sh  entrypoint_stress.sh
examples/: mesh_check.rs
src/: cli.rs  connection.rs  direct_connect.rs  kv.rs  lib.rs  local_networking.rs  network.rs  router.rs
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: lib.rs  main.rs
