[package]
name = "iroh-lan"
description = "iroh-lan = hamachi - account - install"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/iroh-lan"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "1.0.0"
edition = "2024"


[dependencies]
anyhow = "1"
iroh-topic-tracker = { git = "https://github.com/rustonbsd/iroh-topic-tracker", rev="a707fc4d9440c1599f4fb6ec8a8f4a261d22698e" }
ed25519-dalek = "3.0.0-pre.1"
iroh = "0.96.1"
iroh-gossip = "0.96"
runas = "1"
tokio = "1"
nix = { version = "0.31", features = ["process"] }
self-runas = "0.1"
rand = "0.9"
pnet_packet = "0.35"
tun-rs = { version = "2.7", features = ["async"] }
serde = "1"
futures = "0.3"
postcard = { version = "1", features = ["use-std"] }
sha2 = "0.10"
z32 = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
chrono = { version = "0.4" }
n0-watcher = "0.6"

#iroh-auth = { version = "0.1.2" }
iroh-auth = "0.1.3"
actor-helper = { git = "https://github.com/rustonbsd/actor-helper", rev="049dfda4ffede4aa3e73e446eb1209c7db30b565" } #"0.2"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

#iroh-quinn = { git = "https://github.com/n0-computer/quinn", rev = "315f491bfbdd0bb04fb8cdb43967b40bfef83d22" }

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", rev = "3a45cd0f1bd17b3b0aff81a263b6686b0eb5b837" }
iroh-base = { git = "https://github.com/n0-computer/iroh", rev = "3a45cd0f1bd17b3b0aff81a263b6686b0eb5b837" }
iroh-relay = { git = "https://github.com/n0-computer/iroh", rev = "3a45cd0f1bd17b3b0aff81a263b6686b0eb5b837" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", rev = "c1ad5da464e0238425b29be748478d027ea0b878" }
quinn = { git="https://github.com/rustonbsd/quinn", rev="b9fffdf0eaa4fa06875dc85473a0b6693ab5317d", package = "iroh-quinn" }
quinn-proto = { git="https://github.com/rustonbsd/quinn", rev="b9fffdf0eaa4fa06875dc85473a0b6693ab5317d", package = "iroh-quinn-proto" }
quinn-udp = { git="https://github.com/rustonbsd/quinn", rev="b9fffdf0eaa4fa06875dc85473a0b6693ab5317d", package = "iroh-quinn-udp" }

[lib]
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[[bin]]
name = "iroh-lan"
path = "src/bin/cli.rs"

[[example]]
name = "participant"
path = "examples/participant.rs"
crate-type = ["bin"]

