[package]
name = "iroh-lan-ui"
description = "iroh-lan = hamachi - account - install"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/iroh-lan"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_lan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "~2.8", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

iroh-lan = { path = "../../../iroh-lan" }
once_cell = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
self-runas = "0.1.0"
anyhow = "1"


tracing = { version = "0.1", default-features = false, features = ["std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
